--- a/src/global.css
+++ b/src/global.css
@@ -164,7 +164,7 @@ em {
 
 /* ==== General Styles Start ==== */
 
-.form-controls {
+.form-control {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
@@ -444,7 +444,7 @@ button:disabled {
   color: var(--positive);
 }
 
-.form-controls:disabled {
+.form-control:disabled {
   opacity: 0.3 !important;
 }
 
@@ -682,6 +682,22 @@ input:focus {
 @media screen and (min-width: 500px) {
   .inputWrapper {
     width: 48%;
+  }
+}
+
+/* Input with icons init */
+.inputContainer {
+  position: relative;
+  .icon {
+    position: absolute;
+    right: 5%;
+    top: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    margin: 0;
+    color: var(--Grey3);
   }
 }
 
